Fri May 22 16:37:20 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * docs/tutorial,
    * docs/tutorial/tutorial.rst: Beginnings of a tutorial.

Fri May 22 12:12:20 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * examples/newsml_search.php,
    * examples/newsml_indexer.php: Fixed include paths.

Fri May 22 12:02:42 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * unittests/test_database.php,
    * unittests/test_search.php,
    * unittests/test_fields.php,
    * unittests/runtests.php,
    * unittests/test_docs.php,
    * flax/flaxclient.php,
    * flax/_restclient.php,
    * flax/_restclient_curl.php,
    * flax/flaxerrors.php: Moved core files into flax/ directory, for
      easier installation.

Thu May 21 12:38:01 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * unittests/test_docs.php: Added test for document deletion.

Mon May 18 23:57:18 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* README: Whitespace and line wrapping tweaks.

Sat May 09 12:56:09 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* _restclient_curl.php,flaxclient.php: Add version support.

Wed May  6 09:36:41 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php,
    * _restclient.php,
    * _restclient_curl.php,
    * flaxerrors.php: Added licence/copyright text.
    * examples/newsml_search.php: Changed variable names.
    * examples/newsml_indexer.php: Allow crawling multiple dirs.

Mon May  4 13:48:45 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * examples/newsml_search.php,
    * examples/newsml_showdoc.php,
    * examples/newsml_indexer.php,
    * examples/newsml.xsl: Added simple search UI.

Mon May  4 11:58:09 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
    
    * flaxclient.php: Added database getDocCount() method.
    * unittests/test_docs.php: Added test for getDocCount().

Mon May  4 11:46:53 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php,